# api/v1/models/file_model/todomodels.go
@@ -1,0 +1,7 @@
+package filemodel
+
+type Todo struct {
+	ID        int    `json:"id"`
+	Title     string `json:"title" validate:"required,min=3"`
+	Completed bool   `json:"completed"`
+}
